# gtn

./: CMakeLists.txt  README.md
bindings/python/: CMakeLists.txt  pyproject.toml  setup.py
bindings/python/gtn/: __init__.py  device.cpp
bindings/python/test/: test_bindings.py  test_cuda.py
cmake/: Buildpybind11.cmake
gtn/: CMakeLists.txt  hd_span.h
gtn/cuda/: compose.cu  shortest.cu
test/: CMakeLists.txt  catch.hpp
